fix app content overlap issue

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -19,8 +19,6 @@
   align-items: center;
   flex-grow: 1;
   padding-bottom: 3rem;
-  // filter: blur(0.2px);
-  height: 100%;
 }
 
 .Particle {
